# osm2lanes

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  Release.toml  app-135fd98ec52c0353.js  app-135fd98ec52c0353_bg.wasm  app-26296be3db591b8a.js  app-26296be3db591b8a_bg.wasm  app-3000e0c9f3c55ac7.js  app-3000e0c9f3c55ac7_bg.wasm  app-45f1dfc6e9558237.js  app-45f1dfc6e9558237_bg.wasm  app-47ef035c37ea15f0.js  app-47ef035c37ea15f0_bg.wasm  app-600dae94f8560dbc.js  app-600dae94f8560dbc_bg.wasm  app-7801e7c04d9a194.js  app-7801e7c04d9a194_bg.wasm  app-9d772fede43f2639.js  app-9d772fede43f2639_bg.wasm  app-b41a35d8f9fedf2b.js  app-b41a35d8f9fedf2b_bg.wasm  app-b7963adbc68204ad.js  app-b7963adbc68204ad_bg.wasm  app-be7465edca2582a9.js  app-be7465edca2582a9_bg.wasm  app-c51a1308147b4847.js  app-c51a1308147b4847_bg.wasm  app-e2c78eb655dbc40f.js  app-e2c78eb655dbc40f_bg.wasm  app-f4da38461200aedd.js  app-f4da38461200aedd_bg.wasm  app-fd63f3fd5aa4a908.js  app-fd63f3fd5aa4a908_bg.wasm  dagger.cue  index-13b26aadb3f8ddad.js  index-13b26aadb3f8ddad_bg.wasm  index-14a3314edbfdbfb5.js  index-14a3314edbfdbfb5_bg.wasm  (+258 more)
.githooks/: check  test_kotlin  test_python  test_rust  test_schema
.github/workflows/: crate-deploy.yml  dagger.yml  test.yml  web.yml
country-geocoder/: Cargo.toml  README.md  data.geojson  generate_data.py
country-geocoder/src/: lib.rs
cue.mod/: dagger.mod  dagger.sum
cue.mod/pkg/github.com/simonecarriero/rust-cargo-chef-dagger-action/: LICENSE  README.md
cue.mod/pkg/github.com/simonecarriero/rust-cargo-chef-dagger-action/cargochef/: main.cue
data/: .gitignore  spec-lanes.json  test_spec.py  tests.json  tests.json.bkp  tests.yml
data/githooks/: pre-push
driving-side/: Cargo.toml  README.md  data.geojson  generate_data.py
driving-side/src/: lib.rs
editor/: main.css
editor/assets/: README.md
editor/js/: cards.js
editor/js/osm2lanes-npm/: osm2lanes_npm.d.ts  osm2lanes_npm.js  osm2lanes_npm_bg.wasm  osm2lanes_npm_bg.wasm.d.ts  package.json
kotlin/: build.gradle.kts
kotlin/src/main/kotlin/: Main.kt
kotlin/src/test/kotlin/: Test.kt
osm-tag-schemes/: Cargo.toml
osm-tag-schemes/src/: access.rs  access_by_lane.rs  highway.rs  keys.rs  lib.rs  lit.rs  smoothness.rs  track_type.rs
osm-tags/: Cargo.toml  README.md
osm-tags/src/: access.rs  key.rs  lib.rs  osm.rs  val.rs
osm2lanes/: Cargo.toml
osm2lanes-bin/: Cargo.toml
osm2lanes-bin/src/: main.rs
osm2lanes-cli/: Cargo.toml
osm2lanes-cli/src/: main.rs
osm2lanes-npm/: Cargo.toml  README.md
osm2lanes-npm/src/: lib.rs
osm2lanes-npm/web/: index.html
osm2lanes-web/: Cargo.toml  index.html
osm2lanes-web/assets/css/: main.css
osm2lanes-web/src/: agent.rs  canvas.rs  control.rs  draw.rs  lib.rs  main.rs  map.rs
osm2lanes/benches/: benchmark_slice_all_same.rs  benchmark_tests.rs  benchmark_tests_sample.rs
osm2lanes/src/: lib.rs  locale.rs  metric.rs  overpass.rs  tag.rs  tag_keys.rs  test.rs
osm2lanes/src/road/: lane.rs  mod.rs  separator.rs
osm2lanes/src/tag/: key.rs  mod.rs  osm.rs
osm2lanes/src/transform/: error.rs  mod.rs
osm2lanes/src/transform/lanes_to_tags/: error.rs  mod.rs
osm2lanes/src/transform/tags_to_lanes/: access_by_lane.rs  counts.rs  error.rs  infer.rs  mod.rs  oneway.rs  road.rs  unsupported.rs
osm2lanes/src/transform/tags_to_lanes/modes/: bicycle.rs  foot_shoulder.rs  mod.rs  non_motorized.rs  parking.rs
osm2lanes/src/transform/tags_to_lanes/modes/bicycle/: cycleway.rs  cycleway_lanes.rs  mod.rs
osm2lanes/src/transform/tags_to_lanes/modes/bus/: busway.rs  mod.rs
osm2lanes/src/transform/tags_to_lanes/separator/: mod.rs  semantic.rs
python/: requirements.txt  setup.py
python/lanes/: core.py
python/osm2lanes/: __main__.py  core.py
python/tests/: test_lanes.py
rust/: .gitignore  .rustfmt.toml  Cargo.toml  README.md  Trunk.toml  release.sh  rust-toolchain.toml
rust/osm2lanes/: Cargo.toml
rust/osm2lanes-bin/: Cargo.toml
rust/osm2lanes-bin/src/: main.rs
rust/osm2lanes-npm/: Cargo.toml  LICENSE_MIT  README.md
rust/osm2lanes-npm/src/: lib.rs
rust/osm2lanes-web/: Cargo.toml  index.html
rust/osm2lanes-web/assets/css/: main.css
rust/osm2lanes-web/src/: canvas.rs  control.rs  draw.rs  main.rs  map.rs
rust/osm2lanes/benches/: benchmark_all_same.rs  benchmark_tests.rs  benchmark_tests_sample.rs
rust/osm2lanes/src/: lib.rs  locale.rs  main.rs  metre.rs  metric.rs  overpass.rs  tags.rs  test.rs  transform.rs  wasm.rs
rust/osm2lanes/src/locale/: mod.rs
rust/osm2lanes/src/locale/country_metadata/: center_line_style.yml
rust/osm2lanes/src/road/: lane.rs  marking.rs  mod.rs
rust/osm2lanes/src/tag/: access.rs  key.rs  mod.rs  osm.rs
rust/osm2lanes/src/transform/: error.rs  lanes_to_tags.rs  mod.rs  tags_to_lanes.rs
rust/osm2lanes/src/transform/lanes_to_tags/: mod.rs
rust/osm2lanes/src/transform/tags_to_lanes/: bicycle.rs  bus.rs  error.rs  foot_shoulder.rs  lane.rs  lane_count.rs  mod.rs  non_motorized.rs  parking.rs  road.rs  separator.rs
rust/osm2lanes/src/transform/tags_to_lanes/modes/: bicycle.rs  bus.rs  foot_shoulder.rs  mod.rs  non_motorized.rs
rust/osm2lanes/src/transform/tags_to_lanes/separator/: mod.rs  semantic.rs
web/: index.html
web_editor/: NOTES.md  README.md  index.html  main.css  serve_locally.sh
web_editor/js/: cards.js  dummy_data.js  main.js  osm2lanes-npm
