[workspace]
members = [
    "osm2lanes",
    "osm-tags",
    "osm-tag-schemes",
    "osm2lanes-web",
    "osm2lanes-bin",
    "osm2lanes-npm",
]
resolver = "2"

[profile.release]
# less code to include into binary
panic = 'abort'
# optimization over all codebase ( better optimization, slower build )
codegen-units = 1
# optimization for size ( more aggressive )
opt-level = 'z'
# link time optimization using using whole-program analysis
lto = true
