[package]
name = "osm-tag-schemes"
version = "0.1.0"
edition = "2021"
description = "OSM Tag Scheme Definitions"
repository = "https://github.com/a-b-street/osm2lanes"
license = "Apache 2.0"
keywords = ["osm", "tag"]
authors = [
    "Dustin Carlino <dabreegster@gmail.com>",
    "Michael Droogleever Fortuyn <droogmic@gmail.com>",
]

[dependencies]
osm-tags = { path = "../osm-tags" }
serde = { version = "1", features = ["derive"] }
