[package]
name = "osm-tag-schemes"
version = "0.1.0"
edition = "2021"
description = "OSM Tag Scheme Definitions"
repository = "https://github.com/a-b-street/osm2lanes"
license = "Apache 2.0"
keywords = ["openstreetmap", "osm", "tag"]
authors = [
    "Dustin Carlino <dabreegster@gmail.com>",
    "Michael Droogleever Fortuyn <droogmic@gmail.com>",
]

[dependencies]
osm-tags = { path = "../osm-tags" }
strum = { version = "0.24", features = ["derive"] }
serde = { version = "1", features = ["derive"], optional = true }

[features]
serde = ["dep:serde", "osm-tags/serde"]
