[package]
name = "osm-tags"
version = "0.1.1"
edition = "2021"
description = "OSM Tags Datatype"
repository = "https://github.com/a-b-street/osm2lanes"
license = "Apache-2.0"
keywords = ["openstreetmap", "osm", "tag"]
authors = [
    "Dustin Carlino <dabreegster@gmail.com>",
    "Michael Droogleever Fortuyn <droogmic@gmail.com>",
]

[dependencies]
kstring = "2.0"
serde = { version = "1", features = ["derive"], optional = true }

[features]
serde = ["dep:serde"]

[dev-dependencies]
serde_json = "1"
