[package]
name = "osm2lanes-bin"
version = "0.1.0"
description = "CLI tool for osm2lanes"
readme = true
repository = "https://github.com/a-b-street/osm2lanes"
license = "Apache 2.0"
keywords = ["osm", "lanes", "cli"]
categories = []
authors = [
    "Dustin Carlino <dabreegster@gmail.com>",
    "Michael Droogleever Fortuyn <droogmic@gmail.com>",
]
edition = "2021"

[dependencies]
clap = { version = "3.1", features = ["derive"] }
flexi_logger = "0.22"
futures = { version = "0.3" }
log = "0.4"
osm2lanes = { path = "../osm2lanes", features = ["overpass"] }
serde_json = "1"
tokio = { version = "1", features = ["rt", "macros"] }
