[package]
name = "osm2lanes-npm"
version = "0.1.0"
description = "NPM package for osm2lanes"
repository = "https://github.com/a-b-street/osm2lanes"
license = "Apache-2.0"
keywords = ["osm", "lanes", "npm"]
categories = []
authors = [
    "Dustin Carlino <dabreegster@gmail.com>",
    "Michael Droogleever Fortuyn <droogmic@gmail.com>",
]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
console_error_panic_hook = "0.1.6"
osm-tags = { path = "../osm-tags" }
osm2lanes = { path = "../osm2lanes", features = ["overpass", "serde"] }
serde = { version = "1", features = ["derive"] }
wasm-bindgen = { version = "=0.2.81", features = [
    "serde-serialize",
] } # loosen after https://github.com/rustwasm/wasm-bindgen/issues/2774
wasm-bindgen-futures = "0.4.31"
