[package]
name = "osm2lanes-web"
version = "0.1.0"
description = "Website for osm2lanes"
readme = true
repository = "https://github.com/a-b-street/osm2lanes"
license = "Apache 2.0"
keywords = ["osm", "lanes", "web"]
categories = []
authors = [
    "Dustin Carlino <dabreegster@gmail.com>",
    "Michael Droogleever Fortuyn <droogmic@gmail.com>",
]
edition = "2021"

[dependencies]
console_log = { version = "0.2", optional = true, features = ["color"] }
gloo-utils = "0.1"
gloo-timers = "0.2"
leaflet = { git = "https://github.com/droogmic/leaflet-rs", branch = "polyline_get_bounds" }
log = "0.4"
osm2lanes = { path = "../osm2lanes", features = ["tests", "overpass"] }
piet = { version = "0.5", features = ["samples"] }
piet-web = "0.5"
serde = { version = "1", features = ["derive"] }
wasm-bindgen = "0.2"
wee_alloc = { version = "0.4", optional = true }
yew = "0.19"

[dependencies.web-sys]
version = "0.3"
features = ["HtmlInputElement", "HtmlCanvasElement", "HtmlSelectElement"]

[features]
default = ["console_log", "wee_alloc"]
