[package]
name = "osm2lanes"
version = "0.1.0"
description = "Transforms tags from an OpenStreetMap way into a specification of the lanes"
repository = "https://github.com/a-b-street/osm2lanes"
license = "Apache 2.0"
keywords = ["osm", "lanes"]
categories = []
authors = [
    "Dustin Carlino <dabreegster@gmail.com>",
    "Michael Droogleever Fortuyn <droogmic@gmail.com>",
]
edition = "2021"

[dependencies]
log = "0.4"
osm-tags = { path = "../osm-tags" }
celes = "2.1" # For countries, TODO: overlaps with locale-codes
locale-codes = "0.3" # For continents, TODO: overlaps with celes
serde = { version = "1", features = [
    "derive",
] } # Crate interface is serde compatible
geo = { version = "0.20", optional = true, features = [
    "use-serde",
] } # Geo utilities for Overpass
reqwest = { version = "0.11", optional = true, features = [
    "blocking",
    "json",
] } # Requests to Overpass
serde_yaml = { version = "0.8", optional = true } # Parsing test data

[features]
overpass = ["geo", "reqwest", "reqwest/blocking", "reqwest/json"]
tests = ["serde_yaml"]

[dev-dependencies]
assert-json-diff = "2.0"
bincode = "1.3"
criterion = { version = "0.3", features = ["html_reports"] }
env_logger = "0.9"
osm2lanes = { path = ".", features = ["tests"] }
serde_json = "1"

[lib]
bench = false

[[bench]]
name = "benchmark_slice_all_same"
harness = false

[[bench]]
name = "benchmark_tests"
harness = false
required-features = ["tests"]

[[bench]]
name = "benchmark_tests_sample"
harness = false
required-features = ["tests"]
