[package]
name = "osm2lanes-npm"
version = "0.1.0"
edition = "2021"
authors = [
    "Dustin Carlino <dabreegster@gmail.com>",
    "Michael Droogleever Fortuyn <droogmic@gmail.com>",
]
license = "Apache 2.0"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
console_error_panic_hook = { version = "0.1.6", optional = true }
osm2lanes = { path = "../osm2lanes", features = [] }
serde = { version = "1", features = ["derive"] }
wasm-bindgen = { version = "=0.2.78", features = [
    "serde-serialize",
] } # loosen after https://github.com/rustwasm/wasm-bindgen/issues/2774
wee_alloc = { version = "0.4", optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.3"
