[package]
name = "osm2lanes-web"
version = "0.1.0"
edition = "2021"
license = "Apache 2.0"

[dependencies]
console_log = { version = "0.2", optional = true, features = ["color"] }
log = "0.4"
osm2lanes = { path = "../osm2lanes" }
piet = { version = "0.5", features = ["samples"] }
piet-web = "0.5"
serde = { version = "1", features = ["derive"] }
wasm-bindgen = "0.2"
wee_alloc = { version = "0.4", optional = true }
yew = "0.19"

[dependencies.web-sys]
version = "0.3"
features = ["HtmlInputElement", "HtmlCanvasElement"]

[features]
default = ["console_log", "wee_alloc"]
