[package]
name = "osm2lanes"
version = "0.1.0"
edition = "2021"
authors = [
    "Dustin Carlino <dabreegster@gmail.com>",
    "Michael Droogleever Fortuyn <droogmic@gmail.com>",
]
license = "Apache 2.0"

[lib]
crate-type = ["cdylib", "lib"]
bench = false

[dependencies]
celes = "2.1"
console_error_panic_hook = { version = "0.1.7", optional = true }
log = "0.4"
reqwest = { version = "0.11", optional = true, features = ["blocking", "json"] }
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.8"
wasm-bindgen = { version = "0.2.79", optional = true, features = ["serde-serialize"] }

[features]
overpass = ["reqwest", "reqwest/blocking", "reqwest/json"]
tests = []
wasm = ["console_error_panic_hook", "wasm-bindgen"]

[dev-dependencies]
assert-json-diff = "2.0"
criterion = { version = "0.3", features = ["html_reports"] }
serde_json = "1"

[[bench]]
name = "benchmark_slice_all_same"
harness = false

[[bench]]
name = "benchmark_tests"
harness = false
