[package]
name = "osm2lanes"
version = "0.1.0"
edition = "2021"
authors = [
    "Dustin Carlino <dabreegster@gmail.com>",
    "Michael Droogleever Fortuyn <droogmic@gmail.com>",
]
license = "Apache 2.0"

[dependencies]
celes = "2.1"
log = "0.4"
reqwest = { version = "0.11", optional = true, features = ["blocking", "json"] }
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.8"

[features]
overpass = ["reqwest", "reqwest/blocking", "reqwest/json"]
tests = []

[dev-dependencies]
osm2lanes = { path = ".", features = ["tests"] }
assert-json-diff = "2.0"
criterion = { version = "0.3", features = ["html_reports"] }
serde_json = "1"

[lib]
bench = false

[[bench]]
name = "benchmark_slice_all_same"
harness = false

[[bench]]
name = "benchmark_tests"
harness = false
required-features = ["tests"]
